add result set test